<resources>
    <string name="app_name">My Diary</string>
    <string name="action_settings">Delete Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">User Email</string>
    <string name="choose_password">Choose Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_with_google">SignUp With Google</string>
    <string name="password">Password</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="login">Login</string>
    <string name="diary_log_title">Diary log title</string>
    <string name="log_contents">log contents</string>
    <string name="date">date</string>
    <string name="todo">TODO</string>
    <string name="save_to_diary">Save to Diary</string>
    <string name="add_new_note">Add New Note</string>
    <string name="user_image">user image</string>
    <string name="log_time">Log time</string>
    <string name="i_dont_have_an_account">I Dont Have An Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_account_email_to_reset_password">Enter Your Account Email to Reset Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">u_sign</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_method">Security Preferences</string>
    <string name="rew"><![CDATA[Always Require Email & Password]]></string>
    <string name="display">Sets Your App display Name</string>
    <string name="no_auth">No Auth is Required Fro This App</string>
    <string name="auth"><![CDATA[Always use Email & Password To Login]]></string>
    <string name="no_print">You Can\'t use Fingerprint to Sign In</string>
    <string name="print">You can Use Fingerprint To Sign In</string>
    <string name="user">Set User Name</string>
    <string name="auth_al">Keep me Signed In</string>
    <string name="no_auth1">This will keep your Account unsecured always</string>
    <string name="auth1">Require an Authentication When You Open the app</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_diary_view">Diary View</string>
    <string name="delete_log">Delete Log</string>
    <string name="viewdoc">Doc title Here</string>
    <string name="diary_title">Diary Title</string>
    <string name="diary_log_contents">Diary Log Contents</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>