<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.savaliscodes.mydiary.MainActivity">
    <item
        android:id="@+id/delete_account"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/log_out"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/log_out"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_icons8_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>