<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/log_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/diary_log_title"
        android:textColor="#151414"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/log_contents"
        android:textColor="#1E1C1C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/log_title"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toBottomOf="@+id/log_title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="@+id/log"
        app:layout_constraintStart_toEndOf="@+id/img_user"
        app:layout_constraintTop_toBottomOf="@+id/log" />
</androidx.constraintlayout.widget.ConstraintLayout>