<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote">

    <EditText
        android:id="@+id/title_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/diary_log_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1E1D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/log_cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/log_contents"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="#1B1919"
        app:layout_constraintEnd_toEndOf="@+id/title_log"
        app:layout_constraintStart_toStartOf="@+id/title_log"
        app:layout_constraintTop_toBottomOf="@+id/title_log"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:text="@string/save_to_diary"
        app:layout_constraintEnd_toEndOf="@+id/log_cont"
        app:layout_constraintStart_toStartOf="@+id/log_cont"
        app:layout_constraintTop_toBottomOf="@+id/log_cont" />

    <ProgressBar
        android:id="@+id/bar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>